[package]
name = "asmos"
version = "0.1.0"
authors = ["Nick Fagan <nick@ifagan.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
bootloader = "*"
volatile = "*"
spin = "*"
x86_64 = "*"

[dependencies.lazy_static]
version="1.0"
features=["spin_no_std"]


[package.metadata.bootimage]
default-target = "x86_64-asmos.json"
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33         # (0x10 << 1) | 1
